--- a/forms-handelling/src/index.css
+++ b/forms-handelling/src/index.css
@@ -12,17 +12,36 @@ code {
     monospace;
 }
 
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-.box{
-    height: 100px;
-    width: 100px;
-    border: 1px solid black;
-    display: inline-block;
-    border-radius: 50% 50% 0;
-    margin-right: 2px;
+.main{
+    padding: 20px;
+    display: flex;
+    flex-direction:column;
 }
+
+input{
+    margin-bottom: 15px;
+    height: 30px;
+    text-indent: 10px;
+    border: 1px solid #444;
+    border-radius: 5px;
+
+ 
+}
+
+textarea {
+    
+    border: 1px solid #444;
+    border-radius: 5px;
+    display: block;
+      
+}
+
+
+
+
