--- a/meme-generator/src/index.css
+++ b/meme-generator/src/index.css
@@ -76,8 +76,39 @@ code {
     border-radius: 5px;
 }
 
-.main__image{
+.meme{
+   display: flex;
+   justify-content: center;
+   position: relative; 
+
+}
+
+.meme__image{
     max-width: 90%;
     height: auto;
-    margin: 20px;
+    border-radius: 3px;
+}
+
+.meme__text {
+    position: absolute;
+    width: 80%;
+    text-align: center;
+    left: 50%;
+    transform: translateX(-50%);
+    margin: 15px 0;
+    padding: 0 5px;
+    font-family: impact, sans-serif;
+    font-size: 2em;
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    text-shadow: 2px 2px 4px black;   
+}
+
+.top{   
+    top: 0;
+}
+
+.bottom {
+   bottom: 0;   
 }
